RESOLVED FIXED276170
[MediaStream][GStreamer] Hardware decoder/sinks do not have src pads
https://bugs.webkit.org/show_bug.cgi?id=276170
Summary [MediaStream][GStreamer] Hardware decoder/sinks do not have src pads
Xabier Rodríguez Calvar
Reported 2024-07-03 03:36:52 PDT
.
Attachments
Xabier Rodríguez Calvar
Comment 1 2024-07-03 04:00:46 PDT
EWS
Comment 2 2024-07-03 06:42:17 PDT
Committed 280622@main (9585720999f6): <https://commits.webkit.org/280622@main> Reviewed commits have been landed. Closing PR #30435 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-03 06:43:17 PDT
Note You need to log in before you can comment on or make changes to this bug.